# bingwallpaper

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  package-release.yml
src/: bingwallpaper.rs  main.rs
src/bingwallpaper/: arguments.rs  bingapiclient.rs  bingwallpaperchanger.rs  configuration.rs  mod.rs  textoverlay.rs  wallpaper_changer.rs
