[package]
name = "bingwallpaper"
version = "1.4.0"
edition = "2021"

authors = ["Thibault Meyer"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thibaultmeyer/bingwallpaper"
repository = "https://github.com/thibaultmeyer/bingwallpaper"
keywords = ["bing-wallpaper", "wallpaper", "wallpaper-changer", "bing-wallpaper-api"]

include = ["/src", "LICENSE"]
publish = false


[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.202"
serde_derive = "1.0.202"
winit = "0.28.7"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }
winver = "1.0.0"
winvd = "0.0.45"
